--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,35 +13,43 @@ dependencies:
   flutter:
     sdk: flutter
 
-
-
+  get: ^4.0.2
+  flutter_svg: ^0.21.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  flutter_localizations:
+    sdk: flutter
 
   flutter_lints: ^1.0.0
 
 
 flutter:
-
-
   uses-material-design: true
 
   assets:
-    - assets/images
-    - assets/fonts
+    - assets/images/
+    - assets/fonts/
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Lato
+      fonts:
+        - asset: assets/fonts/Lato-Hairline.ttf
+          weight: 200
+        - asset: assets/fonts/Lato-Light.ttf
+          weight: 300
+        - asset: assets/fonts/Lato-Regular.ttf
+          weight: 400
+#        - asset: assets/fonts/Lato-Medium.ttf
+#          weight: 500
+#        - asset: assets/fonts/Lato-SemiBold.ttf
+#          weight: 600
+        - asset: assets/fonts/Lato-Bold.ttf
+          weight: 700
+#        - asset: assets/fonts/Lato-ExtraBold.ttf
+#          weight: 800
+        - asset: assets/fonts/Lato-Black.ttf
+          weight: 900
